Issue #14993: Use standard "unsigned char" instead of a unsigned char bitfield